-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11.0.4
-
Component/s: client-libs
-
b03
-
b04
-
generic
-
linux_redhat_6.2
Our upstream builds machines fail to compile jdk-updates/jdk11u tag jdk-11.0.4+3 (last successful tag jdk-11.0.4+2) with gcc 4.4.7 the system compiler on RHEL/CentOS 6.
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
gmake[3]: *** [/home/openjdk/jdk11u/build/release/support/native/java.desktop/libfontmanager/hb-buffer-serialize.o] Error 1
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-buffer.hh:33,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-buffer.cc:30:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-face.cc:29:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-common.cc:31:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh: In function ‘const Type& StructAtOffsetUnaligned(const void*, unsigned int)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:70: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:71: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:73: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh: In function ‘Type& StructAtOffsetUnaligned(void*, unsigned int)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:78: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:79: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:81: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-shaper-impl.hh:30,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-fallback-shape.cc:27:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-font.cc:29:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
gmake[3]: *** [/home/openjdk/jdk11u/build/release/support/native/java.desktop/libfontmanager/hb-buffer-serialize.o] Error 1
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-buffer.hh:33,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-buffer.cc:30:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-face.cc:29:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-common.cc:31:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh: In function ‘const Type& StructAtOffsetUnaligned(const void*, unsigned int)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:70: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:71: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:73: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh: In function ‘Type& StructAtOffsetUnaligned(void*, unsigned int)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:78: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:79: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-machinery.hh:81: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-shaper-impl.hh:30,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-fallback-shape.cc:27:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
In file included from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb.hh:651,
from /home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-font.cc:29:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh: In function ‘T* hb_addressof(T&)’:
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:239: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:240: error: #pragma GCC diagnostic not allowed inside functions
/home/openjdk/jdk11u/src/java.desktop/share/native/libfontmanager/harfbuzz/hb-dsalgs.hh:245: error: #pragma GCC diagnostic not allowed inside functions
- relates to
-
JDK-8210782 Upgrade HarfBuzz to 2.3.1
-
- Closed
-