8224474: harfbuzz 2.3.1 code fails to compile with gcc 4.4.7

Move GCC pragmas outside functions

Reviewed-by: clanger, aph